# CP_5th_course

./: .gitignore  README.md  analysis.txt
Godunov_solver/: CMakeLists.txt  constants.hpp  gas_parameters.hpp  gmon.out  main.cpp
Godunov_solver/Jupyter notebooks/: Fourier transform.ipynb  Fourier_transform.ipynb  Untitled1.ipynb  Untitled2.ipynb  piston up.ipynb
Godunov_solver/Jupyter notebooks/.ipynb_checkpoints/: Fourier transform-checkpoint.ipynb  Fourier_transform-checkpoint.ipynb
Godunov_solver/Tests/: Piston_functions.hpp  Piston_tests.cpp  Piston_tests.hpp  course_paper_tests.hpp
Godunov_solver/solutions/: CMakeLists.txt  limiters.cpp  limiters.h
Godunov_solver/src/: gas_parameters.cpp  godunov_solver.cpp  godunov_solver.hpp  run_all_scripts.py
Godunov_solver/src/HLLC/: hllc.cpp  hllc.hpp
Godunov_solver/src/Riemann_problem/: sample.cpp  sample.hpp  starpu.cpp  starpu.hpp
Godunov_solver/src/plots_scripts/: animated_plots.py  delta_energy_plots.py  energy_plots.py  trajectories_plots.py
Godunov_solver/src/python_scripts/: animated_plots.py  contour_plots.py  delta_energy_plots.py  energy_plots.py  fourier_transform.py  heatmap_plots.py  plotly_plots.py  plotly_plots_spherical.py  run_all_scripts.py  run_all_spherical_scripts.py  trajectories_plots.py  trajectories_table.py  two_solution_comparison.py
Godunov_solver/src/system/: system_helper.cpp  system_helper.hpp
solutions/: limiters.cpp  limiters.h  sod_test.cpp
